--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,13 @@
 <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet"> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "9xh8eqpzr6");
+  </script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -37,15 +43,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="font-family: Poppins;"></div>
     <!-- <div><img src="./Mages.png"  style="height:100px,width:111px" /></div> -->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+ 
   </body>
 </html>
